# my-tests-rep

./: .env  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: deploy.yml
docker/: Dockerfile  docker-compose.prod-image.yml  docker-compose.yml
scripts/: deploy_add.sh  deploy_app.sh  docker_dev.sh  docker_prod.sh  read_env_file.sh
src/: config.py  main.py
