[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["vlad153 <vlad_ss1994@mail.ru>"]
readme = "README.md"
packages = [{include = "test_project"}]

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^6.5.2"
pre-commit = "^3.6.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
