[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["vlad153 <vlad_ss1994@mail.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
pydantic = {version = "^2.6.4", extras = ["email"]}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
